{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 579,
  "lineage": "3377bd15-7d72-c4e0-2da7-74b145a4e889",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "FW-HUB-policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "network_rule_fqdn_enabled": false,
                "proxy_enabled": true,
                "servers": []
              }
            ],
            "firewalls": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/azureFirewalls/FW-HUB"
            ],
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy",
            "location": "japanwest",
            "name": "FW-HUB-policy",
            "resource_group_name": "HUB",
            "rule_collection_groups": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy/ruleCollectionGroups/FW-HUB-rcg",
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy/ruleCollectionGroups/FW-HUB-rcg-dns"
            ],
            "sku": "Standard",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "FW-HUB-rcg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "WindowsUpdateCollection",
                "priority": 200,
                "rule": [
                  {
                    "destination_fqdn_tags": [
                      "WindowsUpdate"
                    ],
                    "destination_fqdns": [],
                    "name": "Windows_Update",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "YumCollection",
                "priority": 210,
                "rule": [
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "rhui-1.microsoft.com"
                    ],
                    "name": "Yum1",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "rhui-2.microsoft.com"
                    ],
                    "name": "Yum2",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "rhui-3.microsoft.com"
                    ],
                    "name": "Yum3",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy/ruleCollectionGroups/FW-HUB-rcg",
            "name": "FW-HUB-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "HubRule",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [
                      "10.189.0.64/26",
                      "10.189.16.0/28"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "22",
                      "3389"
                    ],
                    "name": "Rule1",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "111.108.6.158"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "111.108.6.158"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "22",
                      "3389"
                    ],
                    "name": "Rule2",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.189.0.64/26",
                      "10.189.16.0/28"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.FW-HUB-policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "FW-HUB-rcg-dnat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/firewallPolicies/FW-HUB-policy/ruleCollectionGroups/FW-HUB-rcg-dns",
            "name": "FW-HUB-rcg-dns",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "test-dnat",
                "priority": 300,
                "rule": [
                  {
                    "destination_address": "20.210.140.230",
                    "destination_ports": [
                      "22"
                    ],
                    "name": "test-dnat-01",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "111.108.6.158"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.189.0.68",
                    "translated_port": 22
                  },
                  {
                    "destination_address": "20.210.140.230",
                    "destination_ports": [
                      "3389"
                    ],
                    "name": "test-dnat-02",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "111.108.6.158"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.189.16.4",
                    "translated_port": 3389
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 490,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.FW-HUB-policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "applied_dns_servers": [
              "8.8.8.8"
            ],
            "dns_servers": [
              "8.8.8.8"
            ],
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkInterfaces/vm-linux-nic",
            "internal_domain_name_suffix": "1eerlzgir35uvpe4jy0z4d4bab.mx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-linux-nic-ip",
                "primary": true,
                "private_ip_address": "10.189.0.68",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-0D-3A-CE-EF-76",
            "name": "vm-linux-nic",
            "private_ip_address": "10.189.0.68",
            "private_ip_addresses": [
              "10.189.0.68"
            ],
            "resource_group_name": "HUB",
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Compute/virtualMachines/vm-linux"
          },
          "dependencies": [
            "azurerm_subnet.vnet-HUB-subnet-dns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-windows-nic",
            "internal_domain_name_suffix": "lugheopuuiwurbdtfcagopewqh.mx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-windows-nic-ip",
                "primary": true,
                "private_ip_address": "10.189.16.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-0D-3A-40-07-82",
            "name": "vm-windows-nic",
            "private_ip_address": "10.189.16.4",
            "private_ip_addresses": [
              "10.189.16.4"
            ],
            "resource_group_name": "C2",
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Compute/virtualMachines/vm-windows"
          },
          "dependencies": [
            "azurerm_subnet.vnet-C2-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm-linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkInterfaces/vm-linux-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vm-linux-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkInterfaces/vm-linux-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vm-linux-nsg"
          },
          "dependencies": [
            "azurerm_network_security_group.vm-linux-nsg",
            "azurerm_subnet.vnet-HUB-subnet-dns",
            "azurerm_network_interface.vm-linux-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm-windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-windows-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-windows-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkInterfaces/vm-windows-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-windows-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm-windows-nic",
            "azurerm_network_security_group.vm-windows-nsg",
            "azurerm_subnet.vnet-C2-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-linux-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vm-linux-nsg",
            "location": "japanwest",
            "name": "vm-linux-nsg",
            "resource_group_name": "HUB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-windows-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vm-windows-nsg",
            "location": "japanwest",
            "name": "vm-windows-nsg",
            "resource_group_name": "C2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-C2-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vnet-c2-nsg",
            "location": "japanwest",
            "name": "vnet-c2-nsg",
            "resource_group_name": "C2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-C3-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/networkSecurityGroups/vnet-c3-nsg",
            "location": "japanwest",
            "name": "vnet-c3-nsg",
            "resource_group_name": "C3",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-HUB-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vnet-HUB-nsg",
            "location": "japanwest",
            "name": "vnet-HUB-nsg",
            "resource_group_name": "HUB",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "FW-HUB-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/publicIPAddresses/FW-HUB-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.210.140.230",
            "ip_version": "IPv4",
            "location": "japanwest",
            "name": "FW-HUB-pip",
            "resource_group_name": "HUB",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vgw-HUB-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/publicIPAddresses/vgw-HUB-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.89.245.214",
            "ip_version": "IPv4",
            "location": "japanwest",
            "name": "vgw-HUB-pip",
            "resource_group_name": "HUB",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C2-Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/routeTables/rt-C2/routes/rt-C2-Default",
            "name": "rt-C2-Default",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C2",
            "route_table_name": "rt-C2",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C2-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.0/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/routeTables/rt-C2/routes/rt-C2-HUB",
            "name": "rt-C2-HUB",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C2",
            "route_table_name": "rt-C2",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C2-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.64/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/routeTables/rt-C2/routes/rt-C2-DNS",
            "name": "rt-C2-DNS",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C2",
            "route_table_name": "rt-C2",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C3-Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/routeTables/rt-C3/routes/rt-C3-Default",
            "name": "rt-C3-Default",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C3",
            "route_table_name": "rt-C3",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C3-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.0/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/routeTables/rt-C3/routes/rt-C3-HUB",
            "name": "rt-C3-HUB",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C3",
            "route_table_name": "rt-C3",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-C3-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.64/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/routeTables/rt-C3/routes/rt-C3-DNS",
            "name": "rt-C3-DNS",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "C3",
            "route_table_name": "rt-C3",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.0/28",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB/routes/rt-HUB-C2",
            "name": "rt-HUB-C2",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.64/28",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB/routes/rt-HUB-C3",
            "name": "rt-HUB-C3",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB/routes/rt-HUB-Default",
            "name": "rt-HUB-Default",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-FW-Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-FW/routes/rt-HUB-FW-Default",
            "name": "rt-HUB-FW-Default",
            "next_hop_in_ip_address": "",
            "next_hop_type": "Internet",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB-FW",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-GW-C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.0/28",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW/routes/rt-HUB-GW-C2",
            "name": "rt-HUB-GW-C2",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB-GW",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-GW-C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.64/28",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW/routes/rt-HUB-GW-C3",
            "name": "rt-HUB-GW-C3",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB-GW",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-GW-DNS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.64/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW/routes/rt-HUB-GW-DNS",
            "name": "rt-HUB-GW-DNS",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB-GW",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "rt-HUB-GW-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.0/26",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW/routes/rt-HUB-GW-HUB",
            "name": "rt-HUB-GW-HUB",
            "next_hop_in_ip_address": "10.189.0.196",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "HUB",
            "route_table_name": "rt-HUB-GW",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/routeTables/rt-C2",
            "location": "japanwest",
            "name": "rt-C2",
            "resource_group_name": "C2",
            "route": [
              {
                "address_prefix": "10.189.0.64/26",
                "name": "rt-C2-DNS",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.0.0/26",
                "name": "rt-C2-HUB",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-C2-Default",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/routeTables/rt-C3",
            "location": "japanwest",
            "name": "rt-C3",
            "resource_group_name": "C3",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-C3-Default",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.0.0/26",
                "name": "rt-C3-HUB",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.0.64/26",
                "name": "rt-C3-DNS",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB",
            "location": "japanwest",
            "name": "rt-HUB",
            "resource_group_name": "HUB",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-HUB-Default",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.16.0/28",
                "name": "rt-HUB-C2",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.16.64/28",
                "name": "rt-HUB-C3",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet",
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-HUB-FW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-FW",
            "location": "japanwest",
            "name": "rt-HUB-FW",
            "resource_group_name": "HUB",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt-HUB-FW-Default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/AzureFirewallSubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt-HUB-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW",
            "location": "japanwest",
            "name": "rt-HUB-GW",
            "resource_group_name": "HUB",
            "route": [
              {
                "address_prefix": "10.189.16.64/28",
                "name": "rt-HUB-GW-C3",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.0.64/26",
                "name": "rt-HUB-GW-DNS",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.16.0/28",
                "name": "rt-HUB-GW-C2",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.189.0.0/26",
                "name": "rt-HUB-GW-HUB",
                "next_hop_in_ip_address": "10.189.0.196",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.192/26",
            "address_prefixes": [
              "10.189.0.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "HUB",
            "virtual_network_name": "vnet-HUB"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.128/26",
            "address_prefixes": [
              "10.189.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "HUB",
            "virtual_network_name": "vnet-HUB"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-C2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.0/28",
            "address_prefixes": [
              "10.189.16.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet",
            "name": "vnet-c2-subnet",
            "resource_group_name": "C2",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "vnet-c2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-C3-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.16.64/28",
            "address_prefixes": [
              "10.189.16.64/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet",
            "name": "vnet-c3-subnet",
            "resource_group_name": "C3",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "vnet-c3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-HUB-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.0/26",
            "address_prefixes": [
              "10.189.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet",
            "name": "vnet-HUB-subnet",
            "resource_group_name": "HUB",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "vnet-HUB"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet-HUB-subnet-dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.189.0.64/26",
            "address_prefixes": [
              "10.189.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns",
            "name": "vnet-HUB-subnet-dns",
            "resource_group_name": "HUB",
            "service_endpoints": [
              "Microsoft.Storage",
              "Microsoft.EventHub"
            ],
            "virtual_network_name": "vnet-HUB"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet-C2-subnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vnet-c2-nsg",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-C2-nsg",
            "azurerm_subnet.vnet-C2-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet-C3-subnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/networkSecurityGroups/vnet-c3-nsg",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-C3-nsg",
            "azurerm_subnet.vnet-C3-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet-HUB-subnet-dns-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vnet-HUB-nsg",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-HUB-nsg",
            "azurerm_subnet.vnet-HUB-subnet-dns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet-HUB-subnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vnet-HUB-nsg",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet-HUB-nsg",
            "azurerm_subnet.vnet-HUB-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/routeTables/rt-C2",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet"
          },
          "dependencies": [
            "azurerm_route_table.rt-C2",
            "azurerm_subnet.vnet-C2-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/routeTables/rt-C3",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet"
          },
          "dependencies": [
            "azurerm_route_table.rt-C3",
            "azurerm_subnet.vnet-C3-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "DNS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns"
          },
          "dependencies": [
            "azurerm_subnet.vnet-HUB-subnet-dns",
            "azurerm_route_table.rt-HUB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "FW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/AzureFirewallSubnet",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-FW",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/AzureFirewallSubnet"
          },
          "dependencies": [
            "azurerm_route_table.rt-HUB-FW",
            "azurerm_subnet.AzureFirewallSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB-GW",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_subnet.GatewaySubnet",
            "azurerm_route_table.rt-HUB-GW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet",
            "route_table_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/routeTables/rt-HUB",
            "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet"
          },
          "dependencies": [
            "azurerm_route_table.rt-HUB",
            "azurerm_subnet.vnet-HUB-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.189.16.0/26"
            ],
            "dns_servers": [
              "10.189.0.196"
            ],
            "guid": "39720c5d-a2f4-482d-8473-2880673c9687",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2",
            "location": "japanwest",
            "name": "vnet-c2",
            "resource_group_name": "C2",
            "subnet": [
              {
                "address_prefix": "10.189.16.0/28",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/subnets/vnet-c2-subnet",
                "name": "vnet-c2-subnet",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/networkSecurityGroups/vnet-c2-nsg"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.189.16.64/26"
            ],
            "dns_servers": [
              "10.189.0.196"
            ],
            "guid": "9a3bf74a-2caf-4c73-b2c7-94612e17afb4",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3",
            "location": "japanwest",
            "name": "vnet-c3",
            "resource_group_name": "C3",
            "subnet": [
              {
                "address_prefix": "10.189.16.64/28",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/subnets/vnet-c3-subnet",
                "name": "vnet-c3-subnet",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/networkSecurityGroups/vnet-c3-nsg"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.189.0.0/24"
            ],
            "dns_servers": [
              "10.189.0.196"
            ],
            "guid": "e41509d9-8fc8-4a7f-bc9e-4e359f0fc101",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB",
            "location": "japanwest",
            "name": "vnet-HUB",
            "resource_group_name": "HUB",
            "subnet": [
              {
                "address_prefix": "10.189.0.0/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet",
                "name": "vnet-HUB-subnet",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vnet-HUB-nsg"
              },
              {
                "address_prefix": "10.189.0.128/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.189.0.192/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.189.0.64/26",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/vnet-HUB-subnet-dns",
                "name": "vnet-HUB-subnet-dns",
                "security_group": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/networkSecurityGroups/vnet-HUB-nsg"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vgw-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "enable_bgp": false,
            "generation": "None",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworkGateways/vgw-HUB",
            "ip_configuration": [
              {
                "name": "vgw-HUB-pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/publicIPAddresses/vgw-HUB-pip",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/subnets/GatewaySubnet"
              }
            ],
            "location": "japanwest",
            "name": "vgw-HUB",
            "private_ip_address_enabled": false,
            "resource_group_name": "HUB",
            "sku": "Standard",
            "type": "ExpressRoute",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.vgw-HUB-pip",
            "azurerm_subnet.GatewaySubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-C2-to-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2/virtualNetworkPeerings/peering-C2-to-HUB",
            "name": "peering-C2-to-HUB",
            "remote_virtual_network_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB",
            "resource_group_name": "C2",
            "use_remote_gateways": true,
            "virtual_network_name": "vnet-c2"
          },
          "dependencies": [
            "azurerm_public_ip.vgw-HUB-pip",
            "azurerm_subnet.GatewaySubnet",
            "azurerm_virtual_network.vnet-C2",
            "azurerm_virtual_network.vnet-HUB",
            "azurerm_virtual_network_gateway.vgw-HUB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-C3-to-HUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3/virtualNetworkPeerings/peering-C3-to-HUB",
            "name": "peering-C3-to-HUB",
            "remote_virtual_network_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB",
            "resource_group_name": "C3",
            "use_remote_gateways": true,
            "virtual_network_name": "vnet-c3"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet-HUB",
            "azurerm_virtual_network_gateway.vgw-HUB",
            "azurerm_public_ip.vgw-HUB-pip",
            "azurerm_subnet.GatewaySubnet",
            "azurerm_virtual_network.vnet-C3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-HUB-to-C2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/virtualNetworkPeerings/peering-HUB-to-C2",
            "name": "peering-HUB-to-C2",
            "remote_virtual_network_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C2/providers/Microsoft.Network/virtualNetworks/vnet-c2",
            "resource_group_name": "HUB",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-HUB"
          },
          "dependencies": [
            "azurerm_public_ip.vgw-HUB-pip",
            "azurerm_subnet.GatewaySubnet",
            "azurerm_virtual_network.vnet-C2",
            "azurerm_virtual_network.vnet-HUB",
            "azurerm_virtual_network_gateway.vgw-HUB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-HUB-to-C3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/HUB/providers/Microsoft.Network/virtualNetworks/vnet-HUB/virtualNetworkPeerings/peering-HUB-to-C3",
            "name": "peering-HUB-to-C3",
            "remote_virtual_network_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/C3/providers/Microsoft.Network/virtualNetworks/vnet-c3",
            "resource_group_name": "HUB",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-HUB"
          },
          "dependencies": [
            "azurerm_public_ip.vgw-HUB-pip",
            "azurerm_subnet.GatewaySubnet",
            "azurerm_virtual_network.vnet-C3",
            "azurerm_virtual_network.vnet-HUB",
            "azurerm_virtual_network_gateway.vgw-HUB"
          ]
        }
      ]
    }
  ]
}